<resources>
    <string name="app_name">SmartIdiot</string>
    <string name="user_features">个人中心</string>
    <string name="beauty_pic">福利社区</string>
    <string name="idiot_feature">智障功能</string>
    <string name="we_chat_service">微信精选</string>
    <string name="setting">设置</string>
    <string name="guide_page">引导页</string>
    <string name="enter_main_page">进入主页</string>
    <string name="test">测试</string>
    <string name="plz_input_user_name">请输入用户名</string>
    <string name="plz_input_pass_word">请输入密码</string>
    <string name="remember_pass_word">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_or_change_pass_word">忘记/更改密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="uer_name">用户名</string>
    <string name="age">年龄</string>
    <string name="about_in_register_page">简介</string>
    <string name="pass_word">密码</string>
    <string name="reenter">再输入一次</string>
    <string name="email_address">邮箱</string>
    <string name="reset_password">重置密码</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_pass_word">新密码</string>
    <string name="reenter_pass_word">再次输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="edit_text_can_not_be_empty">输入框不能为空</string>
    <string name="now_loading">加载中</string>
    <string name="logging_in">正在登陆</string>
    <string name="edit_info">编辑资料</string>
    <string name="gender">性别</string>
    <string name="description">简介</string>
    <string name="confirm_edit">确认修改</string>
    <string name="check_express">物流查询</string>
    <string name="phone_local_check">归属地查询</string>
    <string name="log_out">退出登录</string>
    <string name="take_photo">拍照</string>
    <string name="pic_library">图库</string>
    <string name="cancel">取消</string>
    <string name="courier">快递公司</string>
    <string name="sf">sf</string>
    <string name="express_serial_no">快递单号</string>
    <string name="yd">yd</string>
    <string name="look_up">查询</string>
    <string name="request_failer">请求失败:</string>
    <string name="input_error">输入有误</string>
    <string name="plz_input_phone_num">请输入号码</string>
</resources>
