<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:hint="@string/uer_name"
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/age"
        android:id="@+id/et_user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/about_in_register_page"
        android:id="@+id/et_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:hint="@string/pass_word"
        android:id="@+id/et_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/reenter"
        android:id="@+id/reenter_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/email_address"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>