<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CourierActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier"
        android:text="@string/yd" />

    <EditText
        android:id="@+id/et_serial_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/express_serial_no"
        android:text="3903135105246" />

    <Button
        android:id="@+id/bt_look_up"
        android:text="@string/look_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/mListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>