<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/bt_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/take_photo" />

    <Button
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/bt_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/pic_library" />

    <Button
        android:padding="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/button_bg" />
</LinearLayout>